--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
-    "@prisma/extension-accelerate": "^3.0.0",
-    "@tanstack/react-query": "^5.90.11",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "@prisma/extension-accelerate": "^3.0.1",
+    "@tanstack/react-query": "^5.90.12",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "pg": "^8.16.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -40,14 +40,14 @@
     "@types/pg": "^8.15.6",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "babel-plugin-react-compiler": "1.0.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.1",
-    "prisma": "^7.0.1",
+    "eslint-config-next": "^16.0.7",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vitepress": "2.0.0-alpha.12"
+    "vitepress": "^2.0.0-alpha.15"
   }
 }
